--- a/package.json
+++ b/package.json
@@ -4,25 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec node build/bundle.js",
-    "dev:build:server": "webpack --config webpack.config.server.js --watch",
-    "dev:build:client": "webpack --config webpack.config.client.js --watch"
+    "dev:build-server": "webpack --config webpack.config.server.js --watch",
+    "dev:build-client": "webpack --config webpack.config.client.js --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
     "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
+    "redux-actions": "^2.4.0",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
     "@types/react": "^16.3.16",
     "@types/react-dom": "^16.0.5",
+    "@types/react-redux": "^6.0.1",
     "@types/react-router-config": "^1.0.7",
     "@types/react-router-dom": "^4.2.7",
+    "@types/redux-actions": "^2.3.0",
     "@types/webpack": "^4.4.0",
     "@types/webpack-env": "^1.13.6",
     "awesome-typescript-loader": "^5.0.0",
@@ -34,6 +42,7 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "npm-run-all": "^4.1.3",
     "tslint": "^5.10.0",
     "tslint-react": "^3.6.0",
     "typescript": "^2.9.1",
