--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "npm-run-all": "^4.1.3",
     "tslint": "^5.10.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.9.1",
+    "typescript": "2.8.3",
     "webpack": "^4.10.2",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
