--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "express-http-proxy": "^1.2.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
@@ -21,7 +22,9 @@
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "serialize-javascript": "1.4.0",
+    "serializer.ts": "0.0.12"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
@@ -31,6 +34,7 @@
     "@types/react-router-config": "^1.0.7",
     "@types/react-router-dom": "^4.2.7",
     "@types/redux-actions": "^2.3.0",
+    "@types/serialize-javascript": "^1.3.2",
     "@types/webpack": "^4.4.0",
     "@types/webpack-env": "^1.13.6",
     "awesome-typescript-loader": "^5.0.0",
@@ -43,6 +47,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "npm-run-all": "^4.1.3",
+    "redux-devtools-extension": "^2.13.2",
     "tslint": "^5.10.0",
     "tslint-react": "^3.6.0",
     "typescript": "2.8.3",
