--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "skipDefaultLibCheck": true,
     "strict": true,
     "outDir": "build",
-    "lib": ["es6", "es7", "dom", "dom.iterable"],
+    "lib": ["es6", "es7", "dom", "dom.iterable", "es2015.iterable"],
     "baseUrl": "src",
     "paths": {
       "app/*": ["./app/*"]
